<resources>
    <string name="app_name">E-WoodFish-Android</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">物品</string>
    <string name="title_notifications">排行榜</string>
    <string name="title_about">关于</string>
    <string name="title_activity_about_fragment">AboutFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">这是关于页面</string>
    <string name="login_title">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="btn_refresh">刷新</string>
    <string name="muyu">muyu</string>
    <string name="click">点击</string>
    <string name="item">item</string>
    <string name="use">使用</string>
    <string name="item_title">标题</string>
    <string name="item_desc">道具介绍</string>
    <string name="str_index">index</string>
    <string name="str_name">name</string>
    <string name="str_age">afe\'</string>
    <string name="str_sex">sex</string>
    <string name="str_department">depart</string>
    <string name="str_rank">rank</string>
    <string name="str_sales">sale</string>
</resources>