<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btn_loginOut"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:text="@string/exit"
                android:textSize="11sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_muyu"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/muyu"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/woodfish_Black"
        android:foregroundGravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_Click"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/click" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>