<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btn_Refresh"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:text="@string/btn_refresh"
                android:textSize="11sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@+id/top">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/item"
                android:src="@drawable/ic_baseline_catching_pokemon_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_text1"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:text="@string/item_title" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/item_desc1"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/item_desc" />

            <Button
                android:id="@+id/item_click1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/use" />
        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/item"
                android:src="@drawable/ic_baseline_catching_pokemon_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_text2"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:text="@string/item_title" />

            <TextView
                android:id="@+id/item_desc2"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/item_desc" />

            <Button
                android:id="@+id/item_click2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/use" />
        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/item"
                android:src="@drawable/ic_baseline_catching_pokemon_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_text3"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:text="@string/item_title" />

            <TextView
                android:id="@+id/item_desc3"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:text="@string/item_desc" />

            <Button
                android:id="@+id/item_click3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:text="@string/use" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>